# atlan-sample-apps

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  E2E_TESTING_GUIDE.md  E2E_TESTING_QUICK_START.md  README.md  SECURITY.md  pyproject.toml  registry.json
.github/: CODEOWNERS  (+3 more)
connectors/anaplan/: .env.example  Dockerfile  README.md  atlan-app-registry.json  atlan.yaml  main.py  pyproject.toml
connectors/anaplan/app/: activities.py  clients.py  constants.py  handlers.py  models.py  utils.py  workflows.py
connectors/anaplan/app/activities/: __init__.py
connectors/anaplan/app/extracts/: apps.py  pages.py
connectors/anaplan/app/templates/: atlan-connectors-anaplan.json  workflow.json
connectors/anaplan/app/transformers/: __init__.py  app.yaml  page.yaml
connectors/anaplan/frontend/static/: 200.html  404.html  index.html  script.js  styles.css
connectors/anaplan/frontend/templates/: index.html
connectors/anaplan/models/: README.md  anaplanapp.json  anaplanpage.json
connectors/anaplan/scripts/: GenerateCACertCredentials.java  README.md
connectors/anaplan/tests/unit/: conftest.py  test_anaplan_client.py  test_anaplan_handler.py  test_anaplan_transformer.py
giphy/: .env.example  Makefile  README.md  activities.py  main.py  pyproject.toml  test_giphy.py  workflow.py
giphy/frontend/templates/: index.html
hello_world/: Makefile  README.md  activities.py  main.py  pyproject.toml  test_hello_world.py  workflow.py
hello_world/frontend/templates/: index.html
pokemon-connector/: Makefile  README.md  main.py  pyproject.toml
pokemon-connector/app/activities/: __init__.py
pokemon-connector/app/handlers/: handlers.py
pokemon-connector/app/workflows/: __init__.py
pokemon-connector/frontend/static/: script.js  styles.css
pokemon-connector/frontend/templates/: index.html
quickstart/extractor/: README.md  extractor-app-input-table.json  extractor-app-input-table_transformed.json  main.py  pyproject.toml
quickstart/extractor/app/: __init__.py  activities.py  client.py  handler.py  workflow.py
quickstart/extractor/app/templates/: workflow.json
quickstart/extractor/frontend/static/: script.js  styles.css
quickstart/extractor/frontend/templates/: index.html
quickstart/hello_world/: .env.example  Dockerfile  Makefile  README.md  atlan-app-registry.json  atlan-scaffold-overrides.json  atlan.yaml  main.py  pyproject.toml  run_dev.py
quickstart/hello_world/app/: activities.py  connector.py  contracts.py  handler.py  workflow.py
quickstart/hello_world/contract/: PklProject.deps.json  app.pkl
quickstart/hello_world/frontend/static/: config.json  script.js  styles.css
quickstart/hello_world/frontend/templates/: index.html
quickstart/hello_world/tests/: test_hello_world.py
quickstart/hello_world/tests/e2e/: __init__.py
quickstart/hello_world/tests/unit/: test_hello_world.py
quickstart/lakehouse_batch_processor/: README.md  atlan-app-registry.json  atlan.yaml  main.py  pyproject.toml
quickstart/lakehouse_batch_processor/.github/workflows/: build-image.yaml
quickstart/lakehouse_batch_processor/app/: api_client.py  application.py  lakehouse.py  models.py
quickstart/lakehouse_batch_processor/contract/: ingestion.pkl
quickstart/lakehouse_batch_processor/scripts/: seed_events.py
quickstart/lakehouse_batch_processor/tests/unit/: test_application.py  test_models.py
quickstart/polyglot/: .env.template  .gitignore  Dockerfile  README.md  atlan-app-registry.json  atlan.yaml  main.py  pyproject.toml
quickstart/polyglot/app/: __init__.py  activities.py  handler.py  workflow.py
quickstart/polyglot/app/libs/: FactorialCalculator.java  build.sh
quickstart/polyglot/app/utils/: __init__.py  config.py  processor.py
quickstart/polyglot/frontend/static/: config.json  script.js  styles.css
quickstart/polyglot/frontend/templates/: index.html
quickstart/polyglot/tests/: __init__.py  test_activities.py  test_java_interop.py  test_workflow.py
quickstart/polyglot/tests/e2e/: __init__.py
quickstart/polyglot/tests/unit/: test_activities.py
quickstart/sample_event_processor_app/: README.md  atlan-app-registry.json  atlan.yaml  local_run.py  main.py  pyproject.toml
quickstart/sample_event_processor_app/app/: application.py  lakehouse.py
quickstart/sample_event_processor_app/contract/: PklProject  PklProject.deps.json  ingestion.pkl  process-events.pkl
quickstart/sample_event_processor_app/scripts/: seed_events.py
quickstart/sample_event_processor_app/tests/unit/: test_application.py  test_models.py
quickstart/simple-message-processor/: .env.example  QUICKSTART.md  README.md  main.py  publish_messages.py  pyproject.toml  run.sh
quickstart/simple-message-processor/app/: __init__.py
quickstart/simple-message-processor/frontend/static/: index.html
quickstart/simple-message-processor/tests/: __init__.py
templates/generic/: .env.example  Dockerfile  README.md  atlan-app-registry.json  atlan.yaml  main.py  pyproject.toml
templates/generic-extractor-app/: .gitignore  README.md  main.py  pyproject.toml
templates/generic-extractor-app/app/: __init__.py  activities.py  clients.py  handlers.py  workflows.py
templates/generic-extractor-app/app/extracts/: __init__.py
templates/generic-extractor-app/app/templates/: credential.json  workflow.json
templates/generic-extractor-app/app/transformers/: __init__.py  resource.yaml
templates/generic-extractor-app/frontend/static/: index.html
templates/generic/app/: activities.py  client.py  connector.py  contracts.py  handler.py  run_dev.py  workflow.py
templates/generic/app/frontend/: workflow.json
templates/generic/contract/: PklProject  app.pkl
templates/generic/docs/faq/: index.md
templates/generic/docs/getting-started/: index.md
templates/generic/docs/references/: preflight-checks.md  what-does-atlan-crawl.md
utilities/data_quality_rules_monitor/: .dockerignore  .gitignore  Dockerfile  README.md  atlan-app-registry.json  atlan.yaml  main.py  pyproject.toml  railway.toml
utilities/data_quality_rules_monitor/frontend/: Dockerfile
(+698 files in other folders)
