[tool.poetry]
name = "giphy"
version = "0.1.0"
description = "Giphy: A sample app built using Atlan Application SDK"
authors = ["Atlan Apps Team <apps@atlan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
application-sdk = {git = "git@github.com:atlanhq/application-sdk.git", rev = "98e1c2ac40fec128061651ac15f6d13859ba34ee", extras = ["workflows"]}


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
