[tool.poetry]
name = "hello_world"
version = "0.1.0"
description = "Hello World: A sample app built using Atlan Application SDK"
authors = ["Atlan Apps Team <apps@atlan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
application-sdk = {git = "git@github.com:atlanhq/application-sdk.git", tag = "v0.1.0", extras = ["workflows"]}


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
