[project]
name = "sample-event-processor-app"
version = "0.1.0"
description = "Sample app: read events from Iceberg via SDK lakehouse Reader/Writer, call a hello-world API, randomly classify, write results."
authors = [{ name = "Atlan App Team", email = "connect@atlan.com" }]
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    # [lakehouse] core covers Reader.fetch_records + Writer.append used here.
    # No bulk writes (would need [lakehouse-bulk]) and no SQL queries
    # (would need [lakehouse-sql]) in this sample.
    "atlan-application-sdk[tests,workflows,lakehouse]==3.1.0",
    "poethepoet==0.32.1",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "coverage==7.10.7",
    "pre-commit==4.3.0",
]

[tool.poe.tasks]
start-dapr = "dapr run --enable-api-logging --log-level debug --app-id app --app-port 3000 --scheduler-host-address '' --placement-host-address '' --max-body-size 1024Mi --dapr-http-port 3500 --dapr-grpc-port 50001 --resources-path components"
start-temporal = "temporal server start-dev --db-filename ./temporal.db"
start-deps.shell = "poe start-dapr & poe start-temporal &"
stop-deps.shell = "lsof -ti:3000,3500,7233,50001 | xargs kill -9 2>/dev/null || true"
seed = "python scripts/seed_events.py"
test = "pytest tests/ -v"

# Contract generation (requires pkl CLI; mirrors databricks-app/pyproject.toml).
# Outputs: app/generated/process-events/{manifest.json, …, _input.py}
generate.shell = "cd contract && pkl eval --ca-certificates ~/.pkl-ca-bundle.pem -m ../app/generated process-events.pkl"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["./**/*.py"]

[tool.hatch.build.targets.wheel]
include = ["./**/*.py"]
packages = ["app"]

[tool.uv.sources]
# SDK pinned to the lakehouse-interface PR branch
# (atlanhq/application-sdk#1628). Swap to a published release once that
# PR merges and a version is cut.
atlan-application-sdk = { git = "https://github.com/atlanhq/application-sdk.git", branch = "refactor-v4-ware-693-lakehouse-interface" }
