[project]
name = "simple-message-processor"
version = "0.1.0"
description = "Simple Kafka message processor using Atlan Application SDK"
authors = [{ name = "Atlan App Team", email = "connect@atlan.com" }]
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "atlan-application-sdk @ file:///Users/niteesh.hegde/work/messaging/application-sdk",
    "pandas>=2.2.3",
    "dapr==1.16.0",
    "temporalio>=1.7.1",
    "orjson>=3.10.18",
    "poethepoet",
    "dotenv",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks.download-components]
interpreter = "python"
env = { SDK_VERSION = "v0.1.1rc51" }
shell = """
import pathlib, requests, os

components_dir = pathlib.Path("components")
components_dir.mkdir(exist_ok=True)

api_url = "https://api.github.com/repos/atlanhq/application-sdk/contents/components"

response = requests.get(api_url, params={"ref": os.getenv("SDK_VERSION")})
response.raise_for_status()

for file_info in response.json():
    if file_info["type"] == "file" and file_info["name"].endswith(".yaml"):
        raw_url = file_info["download_url"]

        file_response = requests.get(raw_url)
        file_response.raise_for_status()

        file_path = components_dir / file_info["name"]
        file_path.write_text(file_response.text)
        print(f"Downloaded: {file_info['name']}")
"""


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.poe.tasks]

# Start Dapr with environment variables from .env
start-dapr.shell = """
dapr run --enable-api-logging --log-level debug --app-id ${APP_ID:-app} --app-port ${APP_PORT:-3000} --scheduler-host-address '' --placement-host-address '' --dapr-http-max-request-size 1024 --dapr-http-port ${DAPR_HTTP_PORT:-3500} --dapr-grpc-port ${DAPR_GRPC_PORT:-50001} --resources-path components
"""

# Start Temporal with environment variables from .env
start-temporal.shell = """
temporal server start-dev --db-filename ./temporal.db
"""

# Start all dependencies (Dapr + Temporal)
start-deps.shell = "poe start-dapr & poe start-temporal &"

# Stop all dependencies
stop-deps.shell = "lsof -ti:3000,3500,7233,50001 | xargs kill -9 2>/dev/null || true"

# Start the message processor
start-processor.shell = """
set -a && [ -f .env ] && . ./.env && set +a
python main.py
"""

# Publish messages to Kafka
publish-messages.shell = """
set -a && [ -f .env ] && . ./.env && set +a
python publish_messages.py
"""

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20"
]

