[project]
name = "atlan-connector-template"
version = "1.0.0"
description = "Atlan Connector Template - A starting point for building metadata connectors"
authors = [{ name = "Atlan Apps Team", email = "apps@atlan.com" }]
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "atlan-application-sdk[daft,iam-auth,pandas,sqlalchemy,tests,workflows]==2.3.2",
    "poethepoet>=0.37.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pyright>=1.1.403",
    "ruff>=0.12.7",
]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.2.1",
]

[tool.poe.tasks]
start-dapr = "dapr run --enable-api-logging --log-level debug --app-id app --app-port 3000 --dapr-http-port 3500 --dapr-grpc-port 50001 --resources-path components"
start-temporal = "temporal server start-dev --db-filename ./temporal.db"
start-deps.shell = "poe start-dapr & poe start-temporal &"
stop-deps.shell = "lsof -ti:3000,3500,7233,50001 | xargs kill -9 2>/dev/null || true"

[tool.poe.tasks.download-components]
interpreter = "python"
env = { SDK_VERSION = "v2.3.2" }
shell = """
import pathlib, requests, os
components_dir = pathlib.Path("components")
components_dir.mkdir(exist_ok=True)
api_url = "https://api.github.com/repos/atlanhq/application-sdk/contents/components"
response = requests.get(api_url, params={"ref": os.getenv("SDK_VERSION")})
response.raise_for_status()
for file_info in response.json():
    if file_info["type"] == "file" and file_info["name"].endswith(".yaml"):
        file_response = requests.get(file_info["download_url"])
        file_response.raise_for_status()
        (components_dir / file_info["name"]).write_text(file_response.text)
        print(f"Downloaded: {file_info['name']}")
"""

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
