[project]
name = "generic"
version = "0.1.0"
description = "Generic connector scaffold"
requires-python = ">=3.11"
dependencies = [
    "atlan-application-sdk>=3.6.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "atlan-application-sdk[tests]>=3.6.0,<4.0.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.2.0",
    "coverage[toml]>=7.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportMissingImports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
