[project]
name = "data-quality-rules-monitor"
version = "0.1.0"
description = "Read-only Atlan embedded app that lists DQ rules (CustomEntity assets) for the current asset"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
